// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockUI block and unblock fullscreen events: blocked-event-fullscreen 1`] = `
<body
  class="p-overflow-hidden"
>
  <div>
    <div
      class="p-blockui-container"
    />
  </div>
  <div
    class="p-blockui p-component-overlay p-component-overlay-enter p-blockui-document"
    style="z-index: 3204;"
  />
</body>
`;

exports[`BlockUI block and unblock fullscreen events: unblocked-event-fullscreen 1`] = `
<body
  class="p-overflow-hidden"
>
  <div>
    <div
      class="p-blockui-container"
    />
  </div>
  <div
    class="p-blockui p-component-overlay p-component-overlay-enter p-blockui-document p-component-overlay-leave"
    style="z-index: 3204;"
  />
</body>
`;

exports[`BlockUI block and unblock panel events: blocked-event 1`] = `
<div>
  <div
    class="p-blockui-container"
  >
    <div
      class="p-panel p-component"
    >
      <div
        aria-hidden="false"
        aria-labelledby="pr_id_3_header"
        class="p-toggleable-content"
        id="pr_id_3_content"
        role="region"
      >
        <div
          class="p-panel-content"
        >
          unblocked
        </div>
      </div>
    </div>
    <div
      class="p-blockui p-component-overlay p-component-overlay-enter"
      style="z-index: 2103;"
    />
  </div>
</div>
`;

exports[`BlockUI block and unblock panel events: unblocked-event 1`] = `
<div>
  <div
    class="p-blockui-container"
  >
    <div
      class="p-panel p-component"
    >
      <div
        aria-hidden="false"
        aria-labelledby="pr_id_3_header"
        class="p-toggleable-content"
        id="pr_id_3_content"
        role="region"
      >
        <div
          class="p-panel-content"
        >
          unblocked
        </div>
      </div>
    </div>
    <div
      class="p-blockui p-component-overlay p-component-overlay-enter p-component-overlay-leave"
      style="z-index: 2103;"
    />
  </div>
</div>
`;

exports[`BlockUI block fullscreen 1`] = `
<body
  class="p-overflow-hidden"
>
  <div>
    <div
      class="p-blockui-container"
    />
  </div>
  <div
    class="p-blockui p-component-overlay p-component-overlay-enter p-blockui-document"
    style="z-index: 1101;"
  />
</body>
`;

exports[`BlockUI block panel 1`] = `
<body
  class=""
>
  <div>
    <div
      class="p-blockui-container"
    >
      <div
        class="p-panel p-component"
      >
        <div
          aria-hidden="false"
          aria-labelledby="pr_id_1_header"
          class="p-toggleable-content"
          id="pr_id_1_content"
          role="region"
        >
          <div
            class="p-panel-content"
          >
            blocked
          </div>
        </div>
      </div>
      <div
        class="p-blockui p-component-overlay p-component-overlay-enter"
        style="z-index: 2102;"
      />
    </div>
  </div>
</body>
`;

exports[`BlockUI container style and className 1`] = `
<body
  class=""
>
  <div>
    <div
      class="p-blockui-container container-jest"
      style="cursor: pointer;"
    >
      <div
        class="p-panel p-component"
      >
        <div
          aria-hidden="false"
          aria-labelledby="pr_id_4_header"
          class="p-toggleable-content"
          id="pr_id_4_content"
          role="region"
        >
          <div
            class="p-panel-content"
          >
            style + class
          </div>
        </div>
      </div>
      <div
        class="p-blockui p-component-overlay p-component-overlay-enter block-jest"
        style="cursor: move; z-index: 4205;"
      />
    </div>
  </div>
</body>
`;

exports[`BlockUI unblock panel 1`] = `
<body
  class=""
>
  <div>
    <div
      class="p-blockui-container"
    >
      <div
        class="p-panel p-component"
      >
        <div
          aria-hidden="false"
          aria-labelledby="pr_id_2_header"
          class="p-toggleable-content"
          id="pr_id_2_content"
          role="region"
        >
          <div
            class="p-panel-content"
          >
            unblocked
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
